--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <button id="getSquare">New Square</button>
     <div id="grid-container"></div>
 </body>
 
