added button, put constants inside function
put all the necessary constants into the function getSquares

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <button id="getSquare">New Square</button>
+    <button id="getNewSquare">New Square</button>
     <div id="grid-container"></div>
 </body>
 
